emojivoto/service-voting-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-svc
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  - name: prom
    port: 8801
    targetPort: 8801
  selector:
    app: voting-svc
