emojivoto/service-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: web-svc
  type: ClusterIP
