emojivoto/ingress-emojivoto-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/enable-opentelemetry: "true"
    nginx.ingress.kubernetes.io/service-upstream: "true"
  name: emojivoto-web
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: emojivoto.sandbox.hillghost.com
    http:
      paths:
      - backend:
          service:
            name: web-svc
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - emojivoto.sandbox.hillghost.com
    secretName: emojivoto-web-tls
